Hide contribution link from legacy docs.

--- a/styles/main.css
+++ b/styles/main.css
@@ -714,6 +714,10 @@ pre code {
   font-size: 13px;
 }
 
+.contribution {
+  display:none;
+}
+
 .contribution a::before {
   /*Edit*/
   content: "\f044";
